basic img section

--- a/index.html
+++ b/index.html
@@ -40,5 +40,23 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <div class="main-con conteiner">
+        <div class="gallery-section">
+          <div class="images-list">
+            <img src="images/product-img-1.jpg" alt="the seat" />
+            <img src="images/product-img-2.jpg" alt="the seat" />
+            <img src="images/product-img-3.jpg" alt="the seat" />
+            <img src="images/product-img-4.jpg" alt="the seat" />
+            <img src="images/product-img-5.jpg" alt="the seat" />
+          </div>
+
+          <div class="main-image">
+            <!-- image in css -->
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
