not finished yet

--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
             <!-- image in css -->
           </div>
         </div>
+        <div class="text-sec">
+          <h2 class="product-title">Areni 57.1'' Upholstered Loveseat</h2>
+        </div>
+
+        <div class="stars-content conteiner">
+          <div class="stars-img">
+            <img src="images/star.svg" alt="star" />
+            <img src="images/star.svg" alt="star" />
+            <img src="images/star.svg" alt="star" />
+            <img src="images/star.svg" alt="star" />
+            <img src="images/star.svg" alt="star" />
+          </div>
+
+          <h3 class="stars-number">3,345</h3>
+        </div>
       </div>
     </main>
   </body>
